# solver-firmware

./: .gitignore  CMakeLists.txt  README.md  buildfw.sh  format.sh
motor-sequencer/: CMakeLists.txt
motor-sequencer/include/: interrupts.h  io.h
motor-sequencer/src/: interrupts.c  io.c  main.c
